--- a/front-end/package.json
+++ b/front-end/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
+    "vue-toast-notification": "^0.6.1",
     "vuetify": "^2.4.0"
   },
   "devDependencies": {
