--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.9.2",
+    "axios": "^0.21.1",
     "bootstrap": "^5.0.1",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
     "jquery": "^3.6.0",
     "vue": "^2.6.12",
+    "vue-axios-cors": "^1.0.1",
+    "vue-router": "^3.5.1",
     "vue-toast-notification": "^0.6.1"
   },
   "devDependencies": {
